fix mobile header spacing

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,7 +24,6 @@
 .title {
   display: inline-block;
   color: #2a5aa7;
-  padding-right: 0;
 }
 
 .title:hover {
